--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ button {
   margin-top: 20px;
 }
 
-.grid {
+.flex {
   display: flex;
   flex-direction: column;
 }
@@ -71,9 +71,24 @@ button {
   justify-content: center;
 }
 
+#bet-button-row {
+  margin-left: 50px;
+}
+
+#bet-button-row > button {
+  padding: 5px;
+  margin: 10px 5px;
+}
+
+#h-button, #s-button {
+  display: none;
+}
+
 #dealer-hand, #player-hand {
-  border: 2px dashed rgb(93, 90, 90);
-  height: 40vh;
+  border: 2px solid rgb(93, 90, 90);
+  border-radius: 35%;
+  background-color: lightgreen;
+  height: 30vh;
   width: 40vh;
   margin-top: 20px;
 }
@@ -85,12 +100,12 @@ button {
 }
 
 #dealer, #player {
-  margin: 40px;
+  margin: 25px;
 }
 
 #game-play > p {
   font-size: 1.5rem;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 #p-score {
