--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,10 @@ button {
 }
 
 #dealer-hand, #player-hand {
-  border: 2px solid rgb(93, 90, 90);
-  border-radius: 35%;
-  background-color: lightgreen;
-  height: 30vh;
+  border: 2px solid rgb(8, 8, 8);
+  border-radius: 45%;
+  background-color: #35654d;
+  height: 40vh;
   width: 40vh;
   margin-top: 20px;
 }
