--- a/css/main.css
+++ b/css/main.css
@@ -90,11 +90,15 @@ button {
 
 #dealer-hand, #player-hand {
   border: 2px solid rgb(8, 8, 8);
-  border-radius: 45%;
+  border-radius: 20%;
   background-color: #35654d;
-  height: 40vh;
-  width: 40vh;
+  height: 35vh;
+  width: 30vw;
   margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 #hands {
@@ -114,4 +118,10 @@ button {
 
 #p-score {
   font-size: 1.5rem;
+}
+
+@media screen and (max-width: 1200px) {
+  #dealer-hand, #player-hand {
+    height: 38vh;
+  }
 }
