--- a/css/card-deck-css/css/cardstarter.css
+++ b/css/card-deck-css/css/cardstarter.css
@@ -29,7 +29,7 @@
   .card.small {
     font-size: 12px; }
   .card.large {
-    font-size: 3vmin; }
+    font-size: 2.5vmin; }
   .card.xlarge {
     font-size: 42px; }
   .card.no-border {
@@ -346,3 +346,9 @@
   .card.east.shadow,
   .card.E.shadow {
     box-shadow: -2px 2px 3px 0 rgba(41, 41, 41, 0.75); }
+
+  @media screen and (max-width: 920px) {
+    .card.large {
+      font-size: 2vmin;
+    }
+  }
