--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
   height: 100vh;
   margin: 0;
   background-color: lightgray;
+  background-image: url("https: //i.imgur.com/FYxXBu1.jpg");
   font-family: 'Abril Fatface', cursive;
 }
 
@@ -59,7 +60,8 @@ button {
 }
 
 #bet-button-row > button {
-  margin-top: 20px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .align-labels {
@@ -86,7 +88,12 @@ button {
 }
 
 .bet-totals {
-  padding: 23.5px;
+  padding: 24px 51.906px;
+}
+
+#play-button-row {
+  width: 100%;
+  margin: 0 auto;
 }
 
 #totals-row {
