--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
 }
 
