--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,14 @@ button {
 } 
   
 @media screen and (max-width: 700px) {
+  header {
+   justify-content: flex-start;
+  }
+
+  header > h1 {
+    margin-left: 5%;
+  }
+
   #dealer-hand,
   #player-hand {
     height: 20vh;
