--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   background-image: url("https://i.imgur.com/XfDiBCZ.jpg");
   background-size: cover;
+  background-color: #35654d;
   font-family: 'Abril Fatface', cursive;
 }
 
