--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ button {
   height: 15vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
